--- a/Oncohumana Vivir/index.html
+++ b/Oncohumana Vivir/index.html
@@ -368,7 +368,8 @@
                                 el acompañamiento de creencias religiosas juegan un papel vital
                                 en el bienestar de los pacientes con cáncer y sus familias.
                                 Este estudio pionero muestra cómo la fe y la espiritualidad
-                                pueden ser fuentes de consuelo y fortaleza en los momentos más difíciles...
+                                pueden ser fuentes de consuelo y fortaleza en los momentos más difíciles al
+                                afrontar la muerte...
                             </p>
                             <button class="btn text-white" style="background-color: #5EC7E9">Ingresa a
                                 la noticia</button>
