--- a/ProyectoBoli/prueba.html
+++ b/ProyectoBoli/prueba.html
@@ -69,40 +69,38 @@
       </div>
     </div>
     <div class="Rectangle4" style="width: 491.50px; height: 23.50px; left: 95.50px; top: 516.50px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="nombres" placeholder="Ingrese nombres y apellidos" style="width: 491.50px; height: 23.50px; left: 0px; top: 0px;position: absolute;background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="nombres" placeholder="" style="width: 491.50px; height: 23.50px; left: 0px; top: 0px;position: absolute;background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle5" style="width: 427px; height: 23.50px; left: 160px; top: 553.25px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="number" class="form-control" id="cedula" placeholder="Ingrese número de cédula" style="width: 427px; height: 23.50px; left: 160px; top: 553.25px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="number" class="form-control" id="cedula" placeholder="" style="width: 427px; height: 23.50px; left: 160px; top: 553.25px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Ellipse2" style="width: 32px; height: 30.25px; left: 211px; top: 604px; position: absolute; background: #147892; border-radius: 9999px"></div><div class="Rectangle12" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="tipo" placeholder="Ingrese tipo" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="tipo" placeholder="" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle12" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="tipo" placeholder="Ingrese tipo" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="tipo" placeholder="" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
-    <div class="Rectangle12" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="tipo" placeholder="Ingrese tipo" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
-    </div>
+    
     <div class="Rectangle6" style="width: 199.50px; height: 23.50px; left: 95.50px; top: 591.25px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="marca" placeholder="Ingrese marca" style="width: 199.50px; height: 23.50px; left: 95.50px; top: 591.25px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="marca" placeholder="" style="width: 199.50px; height: 23.50px; left: 95.50px; top: 591.25px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle7" style="width: 190px; height: 23.50px; left: 397px; top: 590px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="referencia" placeholder="Ingrese referencia" style="width: 190px; height: 23.50px; left: 397px; top: 590px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="referencia" placeholder="" style="width: 190px; height: 23.50px; left: 397px; top: 590px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle8" style="width: 202px; height: 22.75px; left: 95.50px; top: 627.50px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="modelo" placeholder="Ingrese modelo" style="width: 202px; height: 22.75px; left: 95.50px; top: 627.50px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="modelo" placeholder="" style="width: 202px; height: 22.75px; left: 95.50px; top: 627.50px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle9" style="width: 227px; height: 22.75px; left: 360px; top: 624.50px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="color" placeholder="Ingrese color" style="width: 227px; height: 22.75px; left: 360px; top: 624.50px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="color" placeholder="" style="width: 227px; height: 22.75px; left: 360px; top: 624.50px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle10" style="width: 491.50px; height: 23.50px; left: 95.50px; top: 664.38px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="serial" placeholder="Ingrese serial" style="width: 491.50px; height: 23.50px; left: 95.50px; top: 654.38px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="serial" placeholder="" style="width: 491.50px; height: 23.50px; left: 95.50px; top: 654.38px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle11" style="width: 199.50px; height: 22.75px; left: 95.50px; top: 701.12px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="rin" placeholder="Ingrese rin" style="width: 199.50px; height: 22.75px; left: 95.50px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="rin" placeholder="" style="width: 199.50px; height: 22.75px; left: 95.50px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     <div class="Rectangle12" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; position: absolute; background: rgba(159, 211, 221, 0.85); border-radius: 12px">
-      <input type="text" class="form-control" id="tipo" placeholder="Ingrese tipo" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
+      <input type="text" class="form-control" id="tipo" placeholder="" style="width: 227px; height: 22.75px; left: 360px; top: 701.12px; background: transparent; border: none; padding: 0; padding-left: 3px; font-size:16px;">
     </div>
     
     <div class="Ellipse1" style="width: 66.25px; height: 65.75px; left: 226.25px; top: 442.25px; position: absolute; background: #147892; border-radius: 9999px"></div>
